# recall-kit

./: README.md  TODO.md  examples.md  how_it_works.md  pyproject.toml  quickstart.md  use_cases.md  uv.toml
.github/workflows/: publish.yml  test.yml
docs/: design_and_framework_notes.md  how_llm_implements_plugins_and_extendability.md  implementation_log.md  implementation_notes.md
examples/: basic_usage.py
recall_kit/: __init__.py  cli.py  constants.py  core.py  default_plugin.py  models.py  plugins.py  server.py  smolagents.py  storage.py
recall_kit/api/: __init__.py  routes.py
recall_kit/managers/: __init__.py  chat.py  memory.py  message.py
recall_kit/models/: __init__.py  memory.py  message.py  pydantic_models.py  sql_models.py  user.py
recall_kit/plugins/: __init__.py  default.py  discovery.py  registry.py
recall_kit/processors/: chat_completions.py  memory.py
recall_kit/protocols/: __init__.py  base.py
recall_kit/repository/: __init__.py  chat.py  memory_store.py
recall_kit/services/: embedding.py  memory.py  message_storage.py
recall_kit/storage/: __init__.py  base.py  sqlite.py  vector.py
recall_kit/utils/: __init__.py  completion.py  embedding.py  messaging.py  reference.py
recall_kit/wrappers/: chat_completions.py
scripts/: README.md  pre-commit  release.py
src/: __init__.py  compression.py  constants.py  message.py
src/recall-kit/: __init__.py
tests/: conftest.py
tests/core/: test_cli.py  test_core.py  test_plugins.py
tests/smolagents/: test_smolagents.py  test_smolagents_memory.py
