[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "recall-kit"
version = "0.0.1"
description = "Lightweight memory integration for LLMs"
readme = "README.md"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
requires-python = ">=3.7"
dependencies = []
[[project.authors]]
name = "recall-kit contributors"
email = "example@example.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=23.0.0", "isort>=5.0.0",]

[project.urls]
Homepage = "https://github.com/username/recall-kit"
"Bug Tracker" = "https://github.com/username/recall-kit/issues"

[tool.black]
line-length = 88
target-version = [ "py37",]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py",]
python_functions = [ "test_*",]

[tool.uv.python]
requires-python = ">=3.7"

[tool.hatch.build.targets.wheel]
packages = [ "recall_kit",]

[tool.hatch.build.targets.sdist]
include = [ "recall_kit", "tests", "README.md", "LICENSE",]
