[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recall-kit"
version = "0.0.2"
description = "Lightweight memory integration for LLMs"
readme = "README.md"
authors = [
    {name = "recall-kit contributors", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "importlib-resources",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "openai>=1.0.0",
    "numpy>=1.20.0",
    "click>=8.0.0",
    "sqlite-vec>=0.1.6",
    "typing-extensions>=4.0.0",
    "pytest",
    "litellm",
    "sqlmodel",
    "toolz",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "autoflake",
    "vulture",
]

mcp = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

docs = [
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-rss-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-rss-plugin" ,
    "mkdocs-blog-plugin",
    "mkdocs-material",
]


[tool.hatch.build.targets.wheel]
packages = ["recall_kit"]

[tool.hatch.build.targets.sdist]
include = [
    "recall_kit",
    "tests",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
python = { requires-python = ">=3.9" }
dev-dependencies = []

[project.scripts]
recall = "recall_kit.cli:main"
